--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "backend",
+  "name": "tesouro_da_palavra",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "nodemon": "^3.1.10"
   }
 }
